re PR tree-optimization/32681 (ice for legal C code with flags -ffast-math  -O3 -ftree-vectorize)

PR tree-optimization/32681
	* tree-if-conv.c (find_phi_replacement_condition): Use the condition
	saved in second_edge->aux when first_bb is a loop header.

From-SVN: r126483